src/test/deca/context/valid/homemade/test/test_valid_egalite_classes2.deca
class A{
    int a;
}

class B{
}

{
    A a = new A();
    B b = new B();
    if (a != b){
        println("(a == b)");
    }
}