src/test/deca/context/invalid/homemade/tests/test_non_implemented/test_invalid_instanceof_void.deca
// test invalide de la règle instance of



{
    int a = 8;
    println(a instanceof void);
}